studi-kasus-1/K8S/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: rahmatalhakam/authservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - name: authservice
    protocol: TCP
    port: 80
    targetPort: 80
